orchestration/kubernetes/samples/ingress/haproxy/wso2apim-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2apim-ingress
  namespace: wso2
  annotations:
    # uses https://github.com/jcmoraisjr/haproxy-ingress
    kubernetes.io/ingress.class: "haproxy"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - wso2apim
    - wso2apim-gateway
  rules:
  - host: wso2apim
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2apim-service
          servicePort: 9443
  - host: wso2apim-gateway
    http:
      paths:
      - path: /
        backend:
          serviceName: wso2apim-service
          servicePort: 8243
